--- a/capitulo-8/index.html
+++ b/capitulo-8/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MVLL</title>
 
-    <link rel="stylesheet" href="../css/style.css?v9">
+    <link rel="stylesheet" href="../css/style.css?v10">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
@@ -134,11 +134,442 @@
         <h4>
             1960 - 1970
         </h4>
+        <h5 class="year">
+            1962
+        </h5>
+        <div class="box-item-timeline opacity">
+            <img src="../img/bg-timeline-1.jpg" alt="" width="100%">
+            <div class="box-texto-obra">
+                <h5>Cuento/Relato</h5>
+                <h6>Los jefes</h6>
+            </div>
+        </div>
+        <div class="box-item-timeline item-derecha">
+            <div class="box-texto-obra">
+                <h5>Premio/Primer lugar</h5>
+                <p>Premio Biblioteca Breve, de Seix Barral, por su primera novela La ciudad y los perros (España)</p>
+            </div>
+        </div>
+
+        <div class="clear"></div>
+
+        <h5 class="year">
+            1963
+        </h5>
+        <div class="box-item-timeline">
+            <img src="../img/bg-timeline-1.jpg" alt="" width="100%">
+            <div class="box-texto-obra">
+                <h5>Novela</h5>
+                <h6>La Ciudad y los Perros</h6>
+            </div>
+        </div>
+        <div class="box-item-timeline item-derecha">
+            <div class="box-texto-obra">
+                <h5>Premio/Primer lugar</h5>
+                <p>Premio de la Crítica de España por La ciudad y los perros</p>
+            </div>
+            <div class="box-texto-obra">
+                <h5>Segundo lugar</h5>
+                <p>Segundo puesto del Premio Formentor por La ciudad y los perros (España)</p>
+            </div>
+        </div>
+
+        <div class="clear"></div>
+
+        <h5 class="year">
+            1966
+        </h5>
+        <div class="box-item-timeline">
+            <div class="box-obra-timeline">
+                <img src="../img/bg-timeline-1.jpg" alt="" width="100%">
+                <div class="box-texto-obra">
+                    <h5>Novela</h5>
+                    <h6>La Casa Verde</h6>
+                </div>
+            </div>       
+            <div class="box-obra-timeline">
+                <img src="../img/bg-timeline-1.jpg" alt="" width="100%" class="opacity">
+                <div class="box-texto-obra">
+                    <h5>Obra teatral</h5>
+                    <h6>Conversación en la Catedral</h6>
+                </div>
+            </div>            
+        </div>
+        <div class="box-item-timeline item-derecha margin-top-150">
+            <div class="box-texto-obra">
+                <h5>Premio/Primer lugar</h5>
+                <p>Premio de la Crítica de España por su segunda novela La casa verde</p>
+            </div>
+        </div>
+
+        <div class="clear"></div>
+        <h5 class="year">
+            1967
+        </h5>
+        <div class="box-item-timeline">
+            <div class="box-obra-timeline">
+                <img src="../img/bg-timeline-1.jpg" alt="" width="100%">
+                <div class="box-texto-obra">
+                    <h5>Cuento/ Relato</h5>
+                    <h6>Los Cachorros</h6>
+                </div>
+            </div>                 
+        </div>
+        <div class="box-item-timeline item-derecha">
+            <div class="box-texto-obra">
+                <h5>Premio/Primer lugar</h5>
+                <p>Premio Nacional de Novela (Perú), por La casa verde</p>
+            </div>
+            <div class="box-texto-obra">
+                <h5>Premio/Primer lugar</h5>
+                <p>Premio Rómulo Gallegos (Venezuela), por La casa verde</p>
+            </div>
+        </div>
+
+        <div class="clear"></div>   
+        <h4>
+            1970 - 1980
+        </h4>
+
+        <h5 class="year">
+            1971
+        </h5>
+        <div class="box-item-timeline">
+            <img src="../img/bg-timeline-1.jpg" alt="" width="100%">
+            <div class="box-texto-obra">
+                <h5>Ensayo</h5>
+                <h6>García Márquez: Historia de un deicidio</h6>
+            </div>
+        </div>
+
+        <div class="clear"></div>
+        <h5 class="year">
+            1973
+        </h5>
+        <div class="box-item-timeline">
+            <img src="../img/bg-timeline-1.jpg" alt="" width="100%">
+            <div class="box-texto-obra">
+                <h5>Novela</h5>
+                <h6>Pantaleón y las Visitadoras</h6>
+            </div>
+        </div>
+
+        <div class="clear"></div>
+        <h5 class="year">
+            1975
+        </h5>
+        <div class="box-item-timeline">
+            <img src="../img/bg-timeline-1.jpg" alt="" width="100%">
+            <div class="box-texto-obra">
+                <h5>Ensayo</h5>
+                <h6>La Orgía Perpetua; Flaubert y Madame Bovary</h6>
+            </div>
+        </div>
+
+        <div class="clear"></div>
+        <h5 class="year">
+            1976
+        </h5>
+        <div class="box-item-timeline opacity">
+            <div class="box-obra-timeline">
+                <img src="../img/bg-timeline-1.jpg" alt="" width="100%">
+                <div class="box-texto-obra">
+                    <h5>Cuento/ Relato</h5>
+                    <h6>Los Cachorros</h6>
+                </div>
+            </div>                 
+        </div>
+        <div class="box-item-timeline item-derecha">
+            <div class="box-texto-obra">
+                <h5>Distinción/Membresía</h5>
+                <p>Título de Miembro Honorario de la Universidad Hebrea de Jerusalén (Israel)</p>
+            </div>
+            <div class="box-texto-obra">
+                <h5>Distinción/Membresía</h5>
+                <p>Presidente del PEN Club Internacional, cargo que desempeñaría hasta 1979 (Reino Unido)</p>
+            </div>
+        </div>
+
+        <div class="clear"></div>
+        <h5 class="year">
+            1977
+        </h5>
+        <div class="box-item-timeline">
+            <div class="box-obra-timeline">
+                <img src="../img/bg-timeline-1.jpg" alt="" width="100%">
+                <div class="box-texto-obra">
+                    <h5>Novela</h5>
+                    <h6>La Tía Julia y el Escribidor</h6>
+                </div>
+            </div>                 
+        </div>
+        <div class="box-item-timeline item-derecha">
+            <div class="box-texto-obra">
+                <h5>Premio/Primer lugar</h5>
+                <p>Premio Derechos Humanos 1977, otorgado por la Asociación Judío latinoamericana</p>
+            </div>
+            <div class="box-texto-obra">
+                <h5>Segundo lugar</h5>
+                <p>Medalla de Plata y Diploma de Honor del Concejo Provincial de Lima</p>
+            </div>
+        </div>
+
+        <div class="clear"></div>
+        <h5 class="year">
+            1979
+        </h5>
+        <div class="box-item-timeline opacity">
+            <div class="box-obra-timeline">
+                <img src="../img/bg-timeline-1.jpg" alt="" width="100%">
+                <div class="box-texto-obra">
+                    <h5>Novela</h5>
+                    <h6>La Tía Julia y el Escribidor</h6>
+                </div>
+            </div>                 
+        </div>
+        <div class="box-item-timeline item-derecha">
+            <div class="box-texto-obra">
+                <h5>Premio/Primer lugar</h5>
+                <p>Premio de periodismo Ramón Godó Lallana, otorgado por el diario catalán La Vanguardia (Barcelona, España)</p>
+            </div>
+        </div>
+
+        <div class="clear"></div>   
+        <h4>
+            1980 - 1990
+        </h4>
+
+        <h5 class="year">
+            1981
+        </h5>
+        <div class="box-item-timeline">
+            <div class="box-obra-timeline">
+                <img src="../img/bg-timeline-1.jpg" alt="" width="100%" class="opacity">
+                <div class="box-texto-obra">
+                    <h5>Ensayo</h5>
+                    <h6>La Guerra del Fin del Mundo</h6>
+                </div>
+            </div> 
+            <div class="box-obra-timeline">
+                <img src="../img/bg-timeline-1.jpg" alt="" width="100%">
+                <div class="box-texto-obra">
+                    <h5>Obra teatral</h5>
+                    <h6>La Señorita de Tacna</h6>
+                </div>
+            </div>                 
+        </div>
+        <div class="box-item-timeline item-derecha margin-top-150">
+            <div class="box-texto-obra">
+                <h5>Premio/Primer lugar</h5>
+                <p>Premio de la Crítica (Argentina)</p>
+            </div>
+            <div class="box-texto-obra">
+                <h5>Distinción/Membresía</h5>
+                <p>Medalla de Honor del Congreso, otorgada por el Congreso de la República del Perú, en mérito a su carrera literaria</p>
+            </div>
+        </div>
+
+        <div class="clear"></div>   
+        <h5 class="year">
+            1982
+        </h5>
+        <div class="box-item-timeline opacity">
+            <div class="box-obra-timeline">
+                <img src="../img/bg-timeline-1.jpg" alt="" width="100%">
+                <div class="box-texto-obra">
+                    <h5>Ensayo</h5>
+                    <h6>La Guerra del Fin del Mundo</h6>
+                </div>
+            </div> 
+            <div class="box-obra-timeline">
+                <img src="../img/bg-timeline-1.jpg" alt="" width="100%">
+                <div class="box-texto-obra">
+                    <h5>Obra teatral</h5>
+                    <h6>La Señorita de Tacna</h6>
+                </div>
+            </div>                 
+        </div>
+        <div class="box-item-timeline item-derecha margin-top-150">
+            <div class="box-texto-obra">
+                <h5>Premio/Primer lugar</h5>
+                <p>Pablo Iglesias de Literatura de la Agrupación Socialista de Chamartín por La guerra del fin del mundo</p>
+            </div>
+            <div class="box-texto-obra">
+                <h5>Premio/Primer lugar</h5>
+                <p>Premio Illa del Instituto Italo - Latino Americano de Roma por La tía Julia y el escribidor (Italia)</p>
+            </div>
+        </div>
+
+        <div class="clear"></div>   
+        <h5 class="year">
+            1983
+        </h5>
+        <div class="box-item-timeline">
+            <div class="box-obra-timeline">
+                <img src="../img/bg-timeline-1.jpg" alt="" width="100%" class="opacity">
+                <div class="box-texto-obra">
+                    <h5>Obra teatral</h5>
+                    <h6>Kathie y el Hipopótamo</h6>
+                </div>
+            </div>                 
+        </div>
+
+        <div class="clear"></div>   
+        <h5 class="year">
+            1984
+        </h5>
+        <div class="box-item-timeline">
+            <div class="box-obra-timeline">
+                <img src="../img/bg-timeline-1.jpg" alt="" width="100%">
+                <div class="box-texto-obra">
+                    <h5>Novela</h5>
+                    <h6>Historia de Mayta</h6>
+                </div>
+            </div>                 
+        </div>
+
+        <div class="clear"></div>   
+        <h5 class="year">
+            1985
+        </h5>
+        <div class="box-item-timeline opacity">
+            <div class="box-obra-timeline">
+                <img src="../img/bg-timeline-1.jpg" alt="" width="100%">
+                <div class="box-texto-obra">
+                    <h5>Ensayo</h5>
+                    <h6>La Guerra del Fin del Mundo</h6>
+                </div>
+            </div> 
+            <div class="box-obra-timeline">
+                <img src="../img/bg-timeline-1.jpg" alt="" width="100%">
+                <div class="box-texto-obra">
+                    <h5>Obra teatral</h5>
+                    <h6>La Señorita de Tacna</h6>
+                </div>
+            </div>                 
+        </div>
+        <div class="box-item-timeline item-derecha margin-top-150">
+            <div class="box-texto-obra">
+                <h5>Premio/Primer lugar</h5>
+                <p>Premio Ritz París Hemingway (Francia) por La guerra del fin del mundo</p>
+            </div>
+            <div class="box-texto-obra">
+                <h5>Distinción/Membresía</h5>
+                <p>Condecoración de la Legión de Honor, otorgada por el Gobierno de Francia</p>
+            </div>
+        </div>
+
+        <div class="clear"></div>   
+        <h5 class="year">
+            1986
+        </h5>
+        <div class="box-item-timeline">
+            <div class="box-obra-timeline">
+                <img src="../img/bg-timeline-1.jpg" alt="" width="100%">
+                <div class="box-texto-obra">
+                    <h5>Novela</h5>
+                    <h6>¿Quién Mató a Palomino Molero?</h6>
+                </div>
+            </div> 
+            <div class="box-obra-timeline">
+                <img src="../img/bg-timeline-1.jpg" alt="" width="100%" class="opacity">
+                <div class="box-texto-obra">
+                    <h5>Obra teatral</h5>
+                    <h6>La Chunga</h6>
+                </div>
+            </div>                 
+        </div>
+        <div class="box-item-timeline item-derecha margin-top-150">
+            <div class="box-texto-obra">
+                <h5>Premio/Primer lugar</h5>
+                <p>Premio Príncipe de Asturias de las Letras (España)</p>
+            </div>
+            <div class="box-texto-obra">
+                <h5>Finalista</h5>
+                <p>Finalista Premio Grinzane Cavour en Narrativa Extranjera (Italia), por Historia de Mayta</p>
+            </div>
+        </div>
+
+        <div class="clear"></div>   
+        <h5 class="year">
+            1987
+        </h5>
+        <div class="box-item-timeline">
+            <div class="box-obra-timeline">
+                <img src="../img/bg-timeline-1.jpg" alt="" width="100%">
+                <div class="box-texto-obra">
+                    <h5>Novela</h5>
+                    <h6>El Hablador</h6>
+                </div>
+            </div>                
+        </div>
+
+        <div class="clear"></div>   
+        <h5 class="year">
+            1988
+        </h5>
+        <div class="box-item-timeline">
+            <div class="box-obra-timeline">
+                <img src="../img/bg-timeline-1.jpg" alt="" width="100%">
+                <div class="box-texto-obra">
+                    <h5>Novela</h5>
+                    <h6>Elogio de la Madrastra</h6>
+                </div>
+            </div>                
+        </div>
+        <div class="box-item-timeline item-derecha">
+            <div class="box-texto-obra">
+                <h5>Premio/Primer lugar</h5>
+                <p>Medalla de Oro de la Pan American Society de Americas Society (Estados Unidos)</p>
+            </div>
+            <div class="box-texto-obra">
+                <h5>Distinción/Membresía</h5>
+                <p>Oficial de la Orden de las Artes y las Letras de Francia</p>
+            </div>
+            <div class="box-texto-obra">
+                <h5>Premio/Primer lugar</h5>
+                <p>Premio de la Libertad, otorgado por la Fundación Max Schmidheiny (Suiza)</p>
+            </div>
+        </div>
+
+        <div class="clear"></div>   
+        <h5 class="year">
+            1989
+        </h5>
+        <div class="box-item-timeline opacity">
+            <div class="box-obra-timeline">
+                <img src="../img/bg-timeline-1.jpg" alt="" width="100%">
+                <div class="box-texto-obra">
+                    <h5>Novela</h5>
+                    <h6>Elogio de la Madrastra</h6>
+                </div>
+            </div>                
+        </div>
+        <div class="box-item-timeline item-derecha">
+            <div class="box-texto-obra">
+                <h5>Premio/Primer lugar</h5>
+                <p>Premio Scanno, otorgado por Rizzoli Libri (Italia), por su novela El hablador</p>
+            </div>
+        </div>
+
+        <div class="clear"></div>   
+        <h4>
+            1990 - 2000
+        </h4>
+
+        <div class="clear"></div>   
+        <h5 class="year">
+            1990
+        </h5>
+
+
 
     </div>
       
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>   
     <script src="https://d1ts5g4ys243sh.cloudfront.net/proyectos_especiales_prod/especiales/el-metro-interminable-ecpm/js/ScrollMagic.min.js"></script>
+    
+    <!-- lapiz timeline -->
     <script>
         document.addEventListener("DOMContentLoaded", function () {
             var controller = new ScrollMagic.Controller();
