--- a/capitulo-8/index.html
+++ b/capitulo-8/index.html
@@ -50,28 +50,28 @@
     </span>
 
     <ul class="decadas">
-        <li>
+        <li id="btn-decada-1">
             1950 - 1960
         </li>
-        <li>
+        <li id="btn-decada-2">
             1960 - 1970
         </li>
-        <li>
+        <li id="btn-decada-3">
             1970 - 1980
         </li>
-        <li>
+        <li id="btn-decada-4">
             1980 - 1990
         </li>
-        <li>
+        <li id="btn-decada-5">
             1990 - 2000
         </li>
-        <li>
+        <li id="btn-decada-6">
             2000 - 2010
         </li>
     </ul>
 
     <div class="box-timeline">
-        <h4 style="margin-bottom: 40px;">
+        <h4 style="margin-bottom: 40px;" id="decada-1">
             1950 - 1960
         </h4>
 
@@ -131,7 +131,7 @@
 
         <div class="clear"></div>
 
-        <h4>
+        <h4 id="decada-2">
             1960 - 1970
         </h4>
         <h5 class="year">
@@ -227,7 +227,7 @@
         </div>
 
         <div class="clear"></div>   
-        <h4>
+        <h4 id="decada-3">
             1970 - 1980
         </h4>
 
@@ -335,7 +335,7 @@
         </div>
 
         <div class="clear"></div>   
-        <h4>
+        <h4 id="decada-4">
             1980 - 1990
         </h4>
 
@@ -553,7 +553,7 @@
         </div>
 
         <div class="clear"></div>   
-        <h4>
+        <h4 id="decada-5">
             1990 - 2000
         </h4>
 
@@ -561,8 +561,365 @@
         <h5 class="year">
             1990
         </h5>
+        <div class="box-item-timeline">
+            <div class="box-obra-timeline">
+                <img src="../img/bg-timeline-1.jpg" alt="" width="100%">
+                <div class="box-texto-obra">
+                    <h5>Ensayo</h5>
+                    <h6>La Verdad de las Mentiras: Ensayos sobre la Novela Moderna</h6>
+                </div>
+            </div>                
+        </div>
+        <div class="box-item-timeline item-derecha">
+            <div class="box-texto-obra">
+                <h5>Distinción/Membresía</h5>
+                <p>Doctor honoris causa de la Universidad de Miami (Estados Unidos)</p>
+            </div>
+            <div class="box-texto-obra">
+                <h5>Premio/Primer lugar</h5>
+                <p>Premio Castiglione de Sicilia (Italia)</p>
+            </div>
+            <div class="box-texto-obra">
+                <h5>Distinción/Membresía</h5>
+                <p>Legión de la Libertad, del Instituto Cultural Ludwig von Mises (México)</p>
+            </div>
+        </div>
 
+        <div class="clear"></div>   
+        <h5 class="year">
+            1991
+        </h5>
+        <div class="box-item-timeline">
+            <div class="box-obra-timeline">
+                <img src="../img/bg-timeline-1.jpg" alt="" width="100%">
+                <div class="box-texto-obra">
+                    <h5>Ensayo</h5>
+                    <h6>Carta de Batalla por Tirant lo Blanc</h6>
+                </div>
+            </div>                
+        </div>
+        <div class="box-item-timeline item-derecha">
+            <div class="box-texto-obra">
+                <h5>Distinción/Membresía</h5>
+                <p>Doctor honoris causa de la Universidad de Miami (Estados Unidos)</p>
+            </div>
+            <div class="box-texto-obra">
+                <h5>Premio/Primer lugar</h5>
+                <p>Premio Literario T.S. Eliot de Ingersoll Foundation de The Rockford Institute (Estados Unidos)</p>
+            </div>
+        </div>
 
+        <div class="clear"></div>   
+        <h5 class="year">
+            1992
+        </h5>
+        <div class="box-item-timeline opacity">
+            <div class="box-obra-timeline">
+                <img src="../img/bg-timeline-1.jpg" alt="" width="100%">
+                <div class="box-texto-obra">
+                    <h5>Ensayo</h5>
+                    <h6>Carta de Batalla por Tirant lo Blanc</h6>
+                </div>
+            </div>                
+        </div>
+        <div class="box-item-timeline item-derecha">
+            <div class="box-texto-obra">
+                <h5>Distinción/Membresía</h5>
+                <p>Doctor honoris causa de la Universidad de Boston (Estados Unidos)</p>
+            </div>
+            <div class="box-texto-obra">
+                <h5>Premio/Primer lugar</h5>
+                <p>INTAR Golden Palm Award de INTAR Hispanic American Arts Center de Nueva York (Estados Unidos)</p>
+            </div>
+            <div class="box-texto-obra">
+                <h5>Distinción/Membresía</h5>
+                <p>Doctor honoris causa de la Universidad de Génova (Italia)</p>
+            </div>
+        </div>
+
+        <div class="clear"></div>   
+        <h5 class="year">
+            1993
+        </h5>
+        <div class="box-item-timeline">
+            <div class="box-obra-timeline">
+                <img src="../img/bg-timeline-1.jpg" alt="" width="100%" class="opacity">
+                <div class="box-texto-obra">
+                    <h5>Novela</h5>
+                    <h6>Lituma en los Andes</h6>
+                </div>
+            </div>   
+            <div class="box-obra-timeline">
+                <img src="../img/bg-timeline-1.jpg" alt="" width="100%" class="opacity">
+                <div class="box-texto-obra">
+                    <h5>Ensayo</h5>
+                    <h6>El Pez en el Agua</h6>
+                </div>
+            </div>   
+            <div class="box-obra-timeline">
+                <img src="../img/bg-timeline-1.jpg" alt="" width="100%" class="opacity">
+                <div class="box-texto-obra">
+                    <h5>Obra teatral</h5>
+                    <h6>El Loco de los Balcones</h6>
+                </div>
+            </div>                
+        </div>
+        <div class="box-item-timeline item-derecha margin-top-305">
+            <div class="box-texto-obra">
+                <h5>Distinción/Membresía</h5>
+                <p>Doctor honoris causa de Dowling College (Estados Unidos)</p>
+            </div>
+            <div class="box-texto-obra">
+                <h5>Premio/Primer lugar</h5>
+                <p>Premio Planeta (España), por Lituma en los Andes</p>
+            </div>
+            <div class="box-texto-obra">
+                <h5>Distinción/Membresía</h5>
+                <p>Comendador de la Orden de las Artes y las Letras de Francia</p>
+            </div>
+            <div class="box-texto-obra">
+                <h5>Distinción/Membresía</h5>
+                <p>Doctor honoris causa de la Universidad Francisco Marroquín (Guatemala)</p>
+            </div>
+        </div>
+
+        <div class="clear"></div>   
+        <h5 class="year">
+            1994
+        </h5>
+        <div class="box-item-timeline">
+            <div class="box-obra-timeline opacity">
+                <img src="../img/bg-timeline-1.jpg" alt="" width="100%">
+                <div class="box-texto-obra">
+                    <h5>Novela</h5>
+                    <h6>Lituma en los Andes</h6>
+                </div>
+            </div>                   
+        </div>
+        <div class="box-item-timeline item-derecha">
+            <div class="box-texto-obra">
+                <h5>Distinción/Membresía</h5>
+                <p>Doctor honoris causa de la Universidad de Georgetown (Estados Unidos)</p>
+            </div>
+            <div class="box-texto-obra">
+                <h5>Distinción/Membresía</h5>
+                <p>Doctor honoris causa en Literatura de la Universidad de Yale (Estados Unidos)</p>
+            </div>
+            <div class="box-texto-obra">
+                <h5>Distinción/Membresía</h5>
+                <p>Miembro de la Real Academia Española, donde ocupa el Sillón L (España)</p>
+            </div>
+            <div class="box-texto-obra">
+                <h5>Distinción/Membresía</h5>
+                <p>Premio Miguel de Cervantes (España)</p>
+            </div>
+            <div class="box-texto-obra">
+                <h5>Premio/Primer lugar</h5>
+                <p>Premio Literario Arzobispo Juan de San Clemente de Santiago de Compostela, por Lituma en los Andes (España)</p>
+            </div>
+            <div class="box-texto-obra">
+                <h5>Premio/Primer lugar</h5>
+                <p>Doctor honoris causa de la Universidad de Rennes 2 Alta Bretaña (Francia)</p>
+            </div>
+        </div>
+
+        <div class="clear"></div>   
+        <h5 class="year">
+            1995
+        </h5>
+        <div class="box-item-timeline">
+            <div class="box-obra-timeline opacity">
+                <img src="../img/bg-timeline-1.jpg" alt="" width="100%">
+                <div class="box-texto-obra">
+                    <h5>Novela</h5>
+                    <h6>Lituma en los Andes</h6>
+                </div>
+            </div>                   
+        </div>
+        <div class="box-item-timeline item-derecha">
+            <div class="box-texto-obra">
+                <h5>Distinción/Membresía</h5>
+                <p>Huésped de Honor de la Provincia de Santa Fe (Argentina)</p>
+            </div>
+            <div class="box-texto-obra">
+                <h5>Distinción/Membresía</h5>
+                <p>Doctor honoris causa de la Universidad de Murcia (España)</p>
+            </div>
+            <div class="box-texto-obra">
+                <h5>Distinción/Membresía</h5>
+                <p>Doctor honoris causa de la Universidad de Valladolid (España)</p>
+            </div>
+            <div class="box-texto-obra">
+                <h5>Premio/Primer lugar</h5>
+                <p>Premio Jerusalén (Israel)</p>
+            </div>
+            <div class="box-texto-obra">
+                <h5>Premio/Primer lugar</h5>
+                <p>Premio Literario Internacional Chianti Ruffino Antico Fattore (Florencia, Italia), por Lituma en los Andes</p>
+            </div>
+        </div>
+
+        <div class="clear"></div>   
+        <h5 class="year">
+            1996
+        </h5>
+        <div class="box-item-timeline">
+            <div class="box-obra-timeline">
+                <img src="../img/bg-timeline-1.jpg" alt="" width="100%" class="opacity">
+                <div class="box-texto-obra">
+                    <h5>Ensayo</h5>
+                    <h6>La Utopía Arcaica: José María Arguedas y las Ficciones del Indigenismo</h6>
+                </div>
+            </div>     
+            <div class="box-obra-timeline">
+                <img src="../img/bg-timeline-1.jpg" alt="" width="100%" class="opacity">
+                <div class="box-texto-obra">
+                    <h5>Obra teatral</h5>
+                    <h6>Ojos Bonitos, Cuadros Feos</h6>
+                </div>
+            </div>                   
+        </div>
+        <div class="box-item-timeline item-derecha margin-top-230">
+            <div class="box-texto-obra">
+                <h5>Premio/Primer lugar</h5>
+                <p>Premio de la Paz del Comercio Librero Alemán, otorgado por la Feria del Libro de Fráncfort, Alemania</p>
+            </div>
+        </div>
+
+        <div class="clear"></div>   
+        <h5 class="year">
+            1997
+        </h5>
+        <div class="box-item-timeline">
+            <div class="box-obra-timeline">
+                <img src="../img/bg-timeline-1.jpg" alt="" width="100%">
+                <div class="box-texto-obra">
+                    <h5>Novela</h5>
+                    <h6>Los Cuadernos de Don Rigoberto</h6>
+                </div>
+            </div>     
+            <div class="box-obra-timeline">
+                <img src="../img/bg-timeline-1.jpg" alt="" width="100%" class="opacity">
+                <div class="box-texto-obra">
+                    <h5>Ensayo</h5>
+                    <h6>Cartas a un Joven Novelista</h6>
+                </div>
+            </div>                   
+        </div>
+        <div class="box-item-timeline item-derecha margin-top-230">
+            <div class="box-texto-obra">
+                <h5>Distinción/Membresía</h5>
+                <p>Visitante Ilustre de la ciudad de Buenos Aires, Argentina</p>
+            </div>
+            <div class="box-texto-obra">
+                <h5>Premio/Primer lugar</h5>
+                <p>Premio Mariano de Cavia, otorgado por el diario ABC (España), por su artículo “Los inmigrantes” publicado en El País en agosto de 1996</p>
+            </div>
+            <div class="box-texto-obra">
+                <h5>Premio/Primer lugar</h5>
+                <p>Pluma de Oro, otorgada por el Club de la Escritura (Madrid, España)</p>
+            </div>
+            <div class="box-texto-obra">
+                <h5>Distinción/Membresía</h5>
+                <p>Doctor honoris causa por la Universidad de Lima (Perú)</p>
+            </div>
+            <div class="box-texto-obra">
+                <h5>Distinción/Membresía</h5>
+                <p>Doctor honoris causa por la Universidad Nacional de San Agustín de (Arequipa, Perú)</p>
+            </div>
+            <div class="box-texto-obra">
+                <h5>Distinción/Membresía</h5>
+                <p>Medalla y Diploma de Honor de la Universidad Católica de Santa María de (Arequipa, Perú)</p>
+            </div>
+        </div>
+
+        <div class="clear"></div>   
+        <h5 class="year">
+            1998
+        </h5>
+
+        <div class="box-item-timeline">
+            <div class="box-obra-timeline opacity">
+                <img src="../img/bg-timeline-1.jpg" alt="" width="100%">
+                <div class="box-texto-obra">
+                    <h5>Novela</h5>
+                    <h6>Los Cuadernos de Don Rigoberto</h6>
+                </div>
+            </div>     
+            <div class="box-obra-timeline opacity">
+                <img src="../img/bg-timeline-1.jpg" alt="" width="100%">
+                <div class="box-texto-obra">
+                    <h5>Ensayo</h5>
+                    <h6>Cartas a un Joven Novelista</h6>
+                </div>
+            </div>                   
+        </div>
+        <div class="box-item-timeline item-derecha margin-top-150">
+            <div class="box-texto-obra">
+                <h5>Distinción/Membresía</h5>
+                <p>Huésped de Honor de la ciudad de Córdoba (Argentina)</p>
+            </div>
+            <div class="box-texto-obra">
+                <h5>Distinción/Membresía</h5>
+                <p>National Book Critics Circle Award Categoría “Crítica” (Estados Unidos), por su libro Making Waves</p>
+            </div>
+            <div class="box-texto-obra">
+                <h5>Distinción/Membresía</h5>
+                <p>Doctor honoris causa por la Universidad Ben Gurión, Beer-Sheva (Israel)</p>
+            </div>
+            <div class="box-texto-obra">
+                <h5>Distinción/Membresía</h5>
+                <p>Ciudadano Honorífico de la ciudad de Asunción, Paraguay</p>
+            </div>
+            <div class="box-texto-obra">
+                <h5>Distinción/Membresía</h5>
+                <p>Doctor honoris causa por el University College de Londres (Gran Bretaña)</p>
+            </div>
+        </div>
+
+        <div class="clear"></div>   
+        <h5 class="year">
+            1999
+        </h5>
+
+        <div class="box-item-timeline">
+            <div class="box-obra-timeline opacity">
+                <img src="../img/bg-timeline-1.jpg" alt="" width="100%">
+                <div class="box-texto-obra">
+                    <h5>Novela</h5>
+                    <h6>Los Cuadernos de Don Rigoberto</h6>
+                </div>
+            </div>     
+            <div class="box-obra-timeline opacity">
+                <img src="../img/bg-timeline-1.jpg" alt="" width="100%">
+                <div class="box-texto-obra">
+                    <h5>Ensayo</h5>
+                    <h6>Cartas a un Joven Novelista</h6>
+                </div>
+            </div>                   
+        </div>
+        <div class="box-item-timeline item-derecha margin-top-150">
+            <div class="box-texto-obra">
+                <h5>Premio/Primer lugar</h5>
+                <p>Premio Jorge Isaacs 1999 del Festival Internacional de Arte de Cali (Colombia)</p>
+            </div>
+            <div class="box-texto-obra">
+                <h5>Distinción/Membresía</h5>
+                <p>Doctor honoris causa por la Universidad de Harvard (Estados Unidos)</p>
+            </div>
+            <div class="box-texto-obra">
+                <h5>Distinción/Membresía</h5>
+                <p>Medalla de la Universidad de California, Los Angeles UCLA (Estados Unidos)</p>
+            </div>
+            <div class="box-texto-obra">
+                <h5>Premio/Primer lugar</h5>
+                <p>Premio Ortega y Gasset de Periodismo 1999 por su artículo “Nuevas inquisiciones”, publicado en El País el 8 de noviembre de 1998 (España)</p>
+            </div>
+            <div class="box-texto-obra">
+                <h5>Premio/Primer lugar</h5>
+                <p>XIII Premio Internacional Menéndez Pelayo (España)</p>
+            </div>
+        </div>
 
     </div>
       
@@ -582,6 +939,23 @@
             .setClassToggle(".lapiz", "show") 
             .addTo(controller);
         });
+    </script>
+
+    <!-- scroll timeline -->
+    <script>
+        document.addEventListener("DOMContentLoaded", function () {
+            document.querySelectorAll(".decadas li").forEach(li => {
+                li.addEventListener("click", function () {
+                    const targetId = this.id.replace("btn-", ""); 
+                    const targetElement = document.getElementById(targetId);
+
+                    if (targetElement) {
+                        targetElement.scrollIntoView({ behavior: "smooth" });
+                    }
+                });
+            });
+        });
+
     </script>
 
 </body>
